# lesson_19.2_hw

./: README.md  catalog.json  db.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: del_all.py  load_fixtures.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_manufactured_at.py  0003_alter_category_options_and_more.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html  menu.html
catalog/templates/templatetags/: my_tags.py
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_email.py
users/templates/users/: login.html  register.html  reset_password.html  user_form.html
