[tool.poetry]
name = "leson-19-2-hw"
version = "0.1.0"
description = ""
authors = ["ikachaeva <irenkachaeva@gmail.com>"]
readme = "README.md"
packages = [{include = "leson_19"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
